@startuml
'https://plantuml.com/class-diagram

class Title
class Movie
class Comic
class Show
class MultiSeasonShow
enum Language

Title <|-- Movie
Title <|- Language
Movie <|-- Show
Show <|-- MultiSeasonShow
Title <|-- Comic


class Title{
char title[LEN];
Language lng;
setTitle(char title_t[LEN]);
setLanguage(Language lng);
getLanguage();
}

class Movie{
int duration;
int rate;
    getDuration();
    setDuration();
    getRate();
    setRate();
}

class Comic {
int releaseCount;
int pagesCount;
    getReleaseCount() const;
    setReleaseCount();
    getPagesCount() const;
    setPagesCount();
}

class Show{
    int episodeCount;
    getEpisodeCount();
    setEpisodeCount();
}

class MultiSeasonShow{
    int seasonsCount;
    getSeasonsCount();
    setSeasonsCount();
}

enum Language {
Russian,
English,
Japanese,
Chinese,
Korean
}
@enduml